--- a/app.json
+++ b/app.json
@@ -14,8 +14,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#8E2DE2"
+      },
+      "packageName": "com.karimapps.currencyconverter",
+      "package": "com.anonymous.CurrencyConverter"
     },
     "web": {
       "bundler": "metro",
@@ -30,7 +32,7 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#8E2DE2"
         }
       ]
     ],
